<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/splash_bg"
    android:layout_height="match_parent"
    tools:context="com.alkline.alkasilverlake.activity.NewForgetPasswordActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp">


        <TextView
            android:id="@+id/rbtn_signup"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            android:fontFamily="@font/brownbold"
            android:gravity="center"
            android:text="@string/forgotPass"
            android:textAllCaps="false"
            android:textColor="@color/darkGrayColor"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/log_cancel"
            android:layout_width="30dp"
            android:layout_height="27dp"
            android:layout_alignParentRight="true"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/back_arrow_ico"
            tools:ignore="ContentDescription"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>


    <TextView
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:fontFamily="@font/brownbold"
        android:gravity="center"
        android:layout_marginTop="60dp"
        android:text="@string/you_entered"
        android:textAllCaps="false"
        android:textColor="@color/darkGrayColor"
        android:textSize="20sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/txtEmail"
        android:fontFamily="@font/brownlight"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:padding="3dp"
        android:text="@string/forgotText3"
        android:textAllCaps="false"
        android:textColor="@color/appColor"
        android:textSize="18sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:fontFamily="@font/brownregular"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:padding="3dp"
        android:text="@string/if_we_have_your_email_address_in_the_n_system_you_ll_receive_a_message_nwith_a_link_to_reset_your_password"
        android:textAllCaps="false"
        android:textColor="@color/colorgray"
        android:textSize="14sp" />




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:fontFamily="@font/brownbold"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:padding="3dp"
        android:text="@string/if_you_don_t_see_an_email_from_us_check_your_spam_or_junk_mail"
        android:textAllCaps="false"
        android:textColor="@color/grayMostDark"
        android:textSize="12sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@drawable/btnappcolorback"
        android:layout_gravity="center"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"


        android:id="@+id/btnForgetPassword"
        android:layout_height="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/btncontinue"
            android:fontFamily="@font/brownregular"
            android:textAllCaps="false"
            android:letterSpacing=".20"
            android:textColor="@color/whiteColor"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content" />

    </RelativeLayout>





    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/brownlight"
        android:gravity="center"
        android:padding="3dp"
        android:id="@+id/txtRetry"
        android:text="@string/retry"
        android:textAllCaps="false"
        android:textColor="@color/appColor"
        android:textSize="14sp" />



</LinearLayout>
