<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    android:orientation="vertical"
    android:scrollbars="none">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp">


            <TextView
                android:id="@+id/rbtn_signup"
                android:layout_width="180dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:fontFamily="@font/brownbold"
                android:gravity="center"
                android:text="@string/forgotPass"
                android:textAllCaps="false"
                android:textColor="@color/darkGrayColor"
                android:textSize="17sp" />

            <ImageView
                android:id="@+id/log_cancel"
                android:layout_width="30dp"
                android:layout_height="27dp"
                android:src="@drawable/back_arrow_ico"
                android:layout_alignParentRight="true"
                android:scaleType="centerInside"
                tools:ignore="ContentDescription"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:fontFamily="@font/brownlight"
                android:gravity="center"
                android:padding="3dp"
                android:text="@string/forgotText1"
                android:textAllCaps="false"
                android:textColor="@color/appColor"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:fontFamily="@font/brownlight"
                android:gravity="center"
                android:padding="1dp"
                android:text="@string/forgotText2"
                android:textAllCaps="false"
                android:textColor="@color/appColor"
                android:textSize="12sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/brownlight"
                android:gravity="center"
                android:padding="1dp"
                android:text="to reset your password."
                android:textAllCaps="false"
                android:textColor="@color/appColor"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:orientation="vertical"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">




                <android.support.design.widget.TextInputLayout
                    android:id="@+id/forgetTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                  >

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/brownlight"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:padding="15dp"
                        android:backgroundTint="@color/gray_light_new"
                        android:textColorHint="@color/gray_light_new" />

                </android.support.design.widget.TextInputLayout>







                <Button
                    android:id="@+id/btnForgetPassword"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="140dp"
                    android:background="@drawable/btnappcolorback"
                    android:fontFamily="@font/brownbold"
                    android:gravity="center"
                    android:letterSpacing=".20"
                    android:text="@string/btncontinue"

                    android:textAllCaps="false"
                    android:textColor="@color/whiteColor"
                    android:textSize="12sp"
                    tools:targetApi="lollipop" />



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvacc_signin"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:layout_marginEnd="40dp"
                    android:visibility="gone"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/brownlight"
                    android:gravity="center"
                    android:text="@string/accotext"
                    android:textAllCaps="false"
                    android:textColor="@color/darkGrayColor"
                    android:textSize="12sp" />


            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


</ScrollView>