<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    android:orientation="vertical"
    android:scrollbars="none">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp">


            <TextView
                android:id="@+id/rbtn_signup"
                android:layout_width="180dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:fontFamily="@font/brownbold"
                android:gravity="center"
                android:text="@string/signin"
                android:textAllCaps="false"
                android:textColor="@color/darkGrayColor"
                android:textSize="17sp" />

            <ImageView
                android:id="@+id/log_cancel"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:tint="@color/darkGrayColor"
                android:scaleType="centerInside"
                android:layout_alignParentRight="true"
                android:background="@drawable/circlewhite"
                android:src="@drawable/ic_cancel"
                tools:ignore="ContentDescription" />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginEnd="70dp"
                android:layout_marginStart="70dp"
                android:fontFamily="@font/brownlight"
                android:gravity="center"
                android:padding="3dp"
                android:letterSpacing=".3"
                android:text="@string/hydrate"
                android:textAllCaps="false"
                android:textColor="@color/appColor"
                android:textSize="12sp" />


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:orientation="vertical"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">




                <android.support.design.widget.TextInputLayout
                    android:id="@+id/signin_lay_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/signin_email"
                        android:layout_width="match_parent"
                        android:backgroundTint="@color/gray_light_new"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/brownlight"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:padding="15dp"
                        android:textColorHint="@color/gray_light_new" />

                </android.support.design.widget.TextInputLayout>



                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/signin_lay_Password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                        <EditText
                            android:id="@+id/signin_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/brownlight"
                            android:hint="@string/password"

                            android:backgroundTint="@color/gray_light_new"
                            android:paddingBottom="15dp"
                            android:paddingEnd="50dp"
                            android:paddingRight="15dp"
                            android:paddingTop="12dp"
                            android:paddingStart="15dp"
                            android:textColorHint="@color/gray_light_new"
                            android:paddingLeft="15dp" />
                    </android.support.design.widget.TextInputLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/brownregular"
                    android:padding="3dp"
                    android:id="@+id/txtForgetPassword"
                    android:layout_margin="14dp"
                    android:letterSpacing=".1"
                    android:text="@string/forgot"
                    android:textAllCaps="false"
                    android:textColor="@color/appColor"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/btsignin"
                    android:layout_width="180dp"
                    android:layout_height="25dp"
                    android:layout_below="@+id/birthtext"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="100dp"
                    android:background="@drawable/btnappcolorback"
                    android:fontFamily="@font/brownbold"
                    android:gravity="center"
                    android:letterSpacing=".20"
                    android:text="@string/signin"
                    android:textAllCaps="false"
                    android:textColor="@color/whiteColor"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/signin_acc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btnacc"
                    android:layout_gravity="center"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/brownlight"
                    android:text="@string/new_acc"
                    android:letterSpacing=".5"
                    android:textAllCaps="false"
                    android:textColor="@color/appColor"
                    android:textSize="12sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvacc_signin"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:layout_marginEnd="40dp"
                    android:visibility="gone"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/brownlight"
                    android:gravity="center"
                    android:text="@string/accotext"
                    android:textAllCaps="false"
                    android:textColor="@color/darkGrayColor"
                    android:textSize="12sp" />


            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


</ScrollView>