<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:background="@color/new_gray"
    android:layout_height="match_parent">



    <android.support.v7.widget.CardView
        android:layout_width="35dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        map:cardBackgroundColor="@color/whiteColor"
        map:cardCornerRadius="20dp"
        map:cardElevation="3dp"

        android:layout_height="35dp"
        android:id="@+id/cardCancel"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="10dp">

        <RelativeLayout
            android:layout_width="30dp"
            android:layout_gravity="center"
            android:layout_height="30dp">

            <ImageView
                android:layout_width="30dp"
                android:src="@drawable/ic_cancel"
                android:layout_centerHorizontal="true"
                android:padding="7dp"
                android:layout_centerInParent="true"
                android:tint="@color/black_new"
                android:layout_height="30dp" />

        </RelativeLayout>


    </android.support.v7.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:text="@string/sign_in_or_create_account"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textColor="@color/black_new"
            android:fontFamily="@font/brownstdbold"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/to_save_delivery_addresses"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:textColor="@color/appColor"
            android:fontFamily="@font/brownlight"
            android:layout_height="wrap_content" />


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="120dp"
                android:id="@+id/llSignup"

                android:background="@drawable/blue_shape"
                android:layout_height="32dp">




                <TextView
                    android:layout_width="match_parent"
                    android:id="@+id/txtPickUp"
                    android:gravity="center"
                    android:text="Create account"
                    android:layout_gravity="center"
                    android:textColor="@color/appColor"
                    android:fontFamily="@font/brownlight"
                    android:layout_height="wrap_content"
                     />

            </LinearLayout>

            <LinearLayout
                android:layout_width="120dp"
                android:layout_marginLeft="8dp"
                android:id="@+id/llSignIn"

                android:background="@drawable/blue_shape"
                android:layout_height="32dp"
                android:layout_marginStart="8dp">




                <TextView
                    android:layout_width="match_parent"
                    android:text="Sign In"
                    android:gravity="center"
                    android:id="@+id/txtDelivery"
                    android:layout_gravity="center"
                    android:textColor="@color/appColor"
                    android:fontFamily="@font/brownlight"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:visibility="gone"
        android:textColor="@color/darkGrayColor"
        android:text="@string/to_find_a_delivery_address_start_a_search_above"
        android:fontFamily="@font/brownlight"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

</RelativeLayout>